# FAA-poster

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  run-poster-evolution.sh
applier/: index.js  llm-runner.js  parser.js  strategy-applier.js
assets/gep/: capsules.json  genes.json
bridge/: formatter.js  index.js  signal-collector.js
examples/: brief_brand.json  brief_ecommerce.json  brief_event.json
memory/evolution/: evolution_solidify_state.json  evolution_state.json  memory_graph.jsonl  memory_graph_state.json  personality_state.json
skills/poster-brief/: SKILL.md
skills/poster-build/: SKILL.md
skills/poster-check/: SKILL.md
skills/poster-edit/: SKILL.md
skills/poster-prompt/: SKILL.md
skills/poster-strategy/: SKILL.md
skills/poster-visualize/: SKILL.md
src/faa_poster/: __init__.py  cli.py  exporter.py  imagegen.py  models.py  prompt_builder.py  renderer.py
src/faa_poster/templates/: base.html.j2  ecommerce_promo.html.j2
tests/: applier.test.js  bridge.test.js  test_cli_build.py  test_models.py
